--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,33 +1,35 @@
-
-.nav-arriba{
-    background-color: rgba(155, 80, 80, 0.5);
+.nav-arriba {
+    background-color: rgba(22, 42, 228, 0.3);
     position: fixed;
     margin-top: 0;
     width: 100%;
     height: 60px;
 }
 
-.nav{
-    background-color: rgba(155, 80, 80, 0.5);
+.nav {
+    background-color: rgba(22, 42, 228, 0.3);
     position: fixed;
     margin-top: 60px;
     width: 20%;
     transition: all 1s ease-in-out;
     height: 100vh;
 }
-.nav-btn{
-    width:20%;
-    float:left;
+
+.nav-btn {
+    width: 20%;
+    float: left;
 }
 
-.nav-btn h2{
-    float:left;
+.nav-btn a {
+    float: left;
     margin-top: 10px;
-    margin-left: 10px;
-    color:rgb(231, 67, 17)
+    margin-left: 30px;
+    font-size: 24px;
+    color: rgb(0, 0, 0)
 }
+
 .nav-btn button {
-    float:right;
+    float: right;
     margin-right: 10px;
     margin-top: 10px;
     background-color: rgba(3, 3, 3, 0.2);
@@ -41,7 +43,7 @@
     border-radius: 20%;
 }
 
-.nav-arriba .button-h{
+.nav-arriba .button-h {
     display: none;
     float: right;
     background-color: rgba(3, 3, 3, 0.2);
@@ -56,11 +58,12 @@
     height: 40px;
     border-radius: 20%;
 }
+
 .nav-arriba .button-h {
     transition-duration: 0.4s;
 }
 
-.combobox{
+.combobox {
     transition: all 1s ease-in-out;
     float: right;
     margin-right: 20px;
@@ -68,12 +71,14 @@
     width: 0px;
     height: 0px;
 }
-.combobox ul{
+
+.combobox ul {
     display: none;
 }
-.combobox button{
+
+.combobox button {
     float: right;
-    background-color: rgb(56, 51, 51);
+    background-color: rgba(3, 3, 3, 0.2);
     color: white;
     border: 2px solid black;
     text-align: center;
@@ -82,56 +87,70 @@
     width: 30px;
     height: 25px;
     margin-top: -25px;
+    border-radius: 20%;
 }
 
-.abrir{
+.combobox button:hover {
+    background-color: rgba(3, 3, 3, 0.5);
+    color: white;
+    cursor: pointer;
+}
+
+.abrir {
     transition: all 1s ease-in;
     margin-right: 20px;
     margin-top: 45px;
-    background-color:rgb(75, 147, 156);
+    background-color: rgba(22, 42, 228, 0.3);
     width: 150px;
     height: 150px;
     border-bottom-right-radius: 10%;
     border-top-left-radius: 10%;
     z-index: 1;
 }
-.abrir ul{
+
+.abrir ul {
     list-style: none;
     overflow: hidden;
     display: block;
 }
-.abrir ul li{
+
+.abrir ul li {
     background-color: transparent;
     border-bottom: 1px solid black;
     text-align: center;
 }
-.abrir ul li a{
+
+.abrir ul li a {
     padding: 5px;
     display: block;
     text-decoration: none;
     font-size: 18px;
     color: black;
 }
-.abrir ul li a:hover{
+
+.abrir ul li a:hover {
     background-color: white;
     cursor: pointer;
 }
-  
+
 .nav-btn button:hover {
     background-color: rgba(3, 3, 3, 0.5);
     color: white;
+    cursor: pointer;
 }
-.nav ul{
+
+.nav ul {
     overflow: hidden;
     list-style: none;
 }
-.nav ul li{
-    background-color:rgb(75, 147, 156);
+
+.nav ul li {
+    background-color: rgba(22, 42, 228, 0.3);
     border-bottom: 1px solid black;
     text-align: center;
 }
 
-.nav ul li a{
+.nav ul li a {
     padding: 20px;
     display: block;
     text-decoration: none;
@@ -139,58 +158,129 @@
     color: black;
 }
 
-.nav ul li i{
+.nav ul li i {
     transition: all 1s ease-in-out;
     font-size: 20px;
     color: black;
     margin-left: 10px;
+    margin-top: 3px;
 }
-.nav ul li a:hover{
+
+.nav ul li a:hover {
     background-color: white;
     cursor: pointer;
 }
 
-.active{
+.active {
     margin-left: -15%;
 }
-.active ul li i{
+
+.active ul li i {
+    margin-top: 0;
+    position: absolute;
+    right: 20px;
     padding: 7px;
     color: black;
     transition: all 1s ease-in-out;
-    float: right;
-    background-color:rgb(99, 100, 182);
-    border-bottom: 2px solid black; 
-    border-right: 2px solid black; 
+    background-color: rgb(99, 100, 182);
+    border-bottom: 2px solid black;
+    border-right: 2px solid black;
     border-radius: 20%;
     font-size: 18px;
 }
 
+.footer {
+    transition: all 1s ease-in-out;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 65px;
+}
+
+.active p {
+    transition: all 1s ease-in-out;
+    margin-left: -15%;
+}
+
+.click {
+    position: relative;
+    display: inline-block;
+}
+.click .tooltip{
+    display: none;
+}
+
+.active .click .tooltip {
+    display: block;
+    visibility: hidden;
+    width: 100px;
+    background-color: rgb(113, 113, 175);
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 5%;
+    left: 100%;
+    margin-left: 9px;
+}
+
+.active .click .tooltip::after {
+    content: " ";
+    position: absolute;
+    top: 35%;
+    right: 100%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent black transparent transparent;
+}
+
+.active .click:hover .tooltip {
+    visibility: visible;
+}
+
 @media screen and (max-width: 700px) {
-    .nav-arriba{
+    .nav-arriba {
         height: 70px;
     }
-    .nav{
+
+    .nav {
         width: 50%;
         margin-left: -50%;
         transition: all 1s ease-in-out;
         margin-top: 70px;
         z-index: 2;
     }
-    .nav-btn{
+
+    .nav-btn {
         display: none;
     }
-    .active-movile{
+
+    .active-movile {
         margin-left: 0%;
-    } 
-    .nav-arriba .button-h{
+    }
+
+    .nav-arriba .button-h {
         display: block;
     }
-    .active-movile ul li i{
+
+    .active-movile ul li i {
         background: none;
         border: none;
         float: none;
     }
-    .combobox{
+
+    .combobox {
         display: none;
     }
-} 
+
+    .footer {
+        bottom: 170px;
+    }
+
+    .footer p {
+        font-size: 12px;
+    }
+}
