--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -178,13 +178,13 @@
 .active ul li i {
     margin-top: 0;
     position: absolute;
-    right: 20px;
+    right: 15px;
     padding: 7px;
     color: black;
     transition: all 1s ease-in-out;
-    background-color: rgb(99, 100, 182);
-    border-bottom: 2px solid black;
-    border-right: 2px solid black;
+    background-color: white;
+    border-bottom: 5px solid black;
+    border-right: 5px solid black;
     border-radius: 20%;
     font-size: 18px;
 }
