--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -64,73 +64,65 @@
 }
 
 .combobox {
-    transition: all 1s ease-in-out;
     float: right;
-    margin-right: 20px;
-    margin-top: 45px;
-    width: 0px;
-    height: 0px;
-}
-
-.combobox ul {
-    display: none;
-}
-
-.combobox button {
-    float: right;
-    background-color: rgba(3, 3, 3, 0.2);
-    color: white;
-    border: 2px solid black;
-    text-align: center;
-    text-decoration: none;
-    font-size: 10px;
-    width: 30px;
-    height: 25px;
-    margin-top: -25px;
-    border-radius: 20%;
-}
-
-.combobox button:hover {
-    background-color: rgba(3, 3, 3, 0.5);
-    color: white;
-    cursor: pointer;
-}
-
-.abrir {
-    transition: all 1s ease-in;
-    margin-right: 20px;
-    margin-top: 45px;
-    background-color: rgba(22, 42, 228, 0.3);
     width: 150px;
-    height: 150px;
-    border-bottom-right-radius: 10%;
-    border-top-left-radius: 10%;
-    z-index: 1;
-}
-
-.abrir ul {
-    list-style: none;
-    overflow: hidden;
-    display: block;
-}
-
-.abrir ul li {
-    background-color: transparent;
-    border-bottom: 1px solid black;
-    text-align: center;
-}
-
-.abrir ul li a {
-    padding: 5px;
-    display: block;
-    text-decoration: none;
+    height: 0px;
+    margin-right: 10px;
+    margin-top: 15px;
     font-size: 18px;
-    color: black;
+    height: 30px;
+    width: 30px;
+    margin-left: 20px;
+    cursor: pointer;
+    position: relative;
+    background-color: transparent;
+    border: none;
+    border-radius: 50%;
+}
+.combobox:hover{
+    background-color: rgba(3, 3, 3, 0.1);
 }
 
-.abrir ul li a:hover {
+.combobox .tooltip {
+    transition: all 0.5s ease-out;
+    overflow: hidden;
+    width: 200px;
+    height: 0px;
     background-color: white;
-    cursor: pointer;
+    color: #fff;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    position: absolute;
+    z-index: 1;
+    top: 120%;
+    left: -360%;
+    margin-left: -60px;
+}
+.combobox .tooltip ul {
+    margin-top: 10px;
+    list-style: none;
+}
+
+.combobox .tooltip ul li {
+    color: black;
+    font-size: 14px;
+    text-align: left;
+    padding-left: 30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.combobox .tooltip ul li a{
+    text-decoration: none;
+}
+.combobox .tooltip ul li:hover {
+    background-color: rgba(3, 3, 3, 0.1);
+}
+
+.combobox .abrir {
+    transition: all 0.5s ease-out;
+    visibility: visible;
+    height: 200px;
+    text-decoration: none;
 }
 
 .nav-btn button:hover {
